deprication notes